--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
-        "tymon/jwt-auth": "^2.2"
+        "tymon/jwt-auth": "^2.2",
+        "vonage/client": "^4.2",
+        "vonage/vonage-laravel": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
