--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,10 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
+        "twilio/sdk": "^8.6",
         "tymon/jwt-auth": "^2.2",
         "vonage/client": "^4.2",
+        "vonage/client-core": "^4.3",
         "vonage/vonage-laravel": "^1.0"
     },
     "require-dev": {
